--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,17 +23,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get: ^3.12.1
-  http: ^0.13.3
-  swipeable_card_stack: ^0.0.2
-  get_it: ^2.0.1
-  equatable: ^0.4.0
-  # Functional programming thingies
-  dartz: ^0.8.6
-  # Remote API
-  connectivity: ^0.4.3+7
-  # Local cache
-  shared_preferences: ^0.5.3+4
+  flutter_svg: ^0.19.1
+  cached_network_image: ^2.4.1
+  http: ^0.12.2
+  json_annotation: ^3.1.1
+  intl: ^0.16.1
+  align_positioned: ^1.2.14
+  dotted_border: ^1.0.7
+  get_it: ^5.0.3
+  get: ^3.24.0
+  injectable: ^1.0.7
+  dartz: ^0.9.2
+  data_connection_checker: ^0.3.4
+  shared_preferences: ^0.5.12+4
+  mockito: ^4.1.3
+  # Value equality
+  equatable: ^1.0.1
+  freezed_annotation: ^0.12.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
